[project]
name = "complaint-drafting"
version = "0.1.0"
description = "PocketFlow-based LLM expert system for drafting legal complaints"
authors = [{name = "rhudock"}]
requires-python = ">=3.8"
dependencies = [
    "pocketflow>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
